--- a/complaints.html
+++ b/complaints.html
@@ -770,7 +770,7 @@
                           data-popup="tooltip-custom"
                           data-bs-placement="top"
                           class="avatar pull-up my-0"
-                          title="Alberto Glotzbach"
+                          title="name"
                         >
                           <img
                             src="app-assets/images/portrait/small/avatar-s-1.jpg"
@@ -813,7 +813,7 @@
                           data-popup="tooltip-custom"
                           data-bs-placement="top"
                           class="avatar pull-up my-0"
-                          title="Alberto Glotzbach"
+                          title="name"
                         >
                           <img
                             src="app-assets/images/portrait/small/avatar-s-2.jpg"
@@ -856,7 +856,7 @@
                           data-popup="tooltip-custom"
                           data-bs-placement="top"
                           class="avatar pull-up my-0"
-                          title="Alberto Glotzbach"
+                          title="name"
                         >
                           <img
                             src="app-assets/images/portrait/small/avatar-s-4.jpg"
@@ -900,7 +900,7 @@
                           data-popup="tooltip-custom"
                           data-bs-placement="top"
                           class="avatar pull-up my-0"
-                          title="Alberto Glotzbach"
+                          title="name"
                         >
                           <img
                             src="app-assets/images/portrait/small/avatar-s-19.jpg"
